--- a/platformio.ini
+++ b/platformio.ini
@@ -170,6 +170,21 @@ build_flags = -DHAL=6
 board_upload.maximum_size = 16777216
 board_upload.flash_size = 16MB
 
+
+[env:esp32-a1s-es8388]
+board = esp-wrover-kit
+lib_deps =
+    ${env.lib_deps}
+    https://github.com/maditnerd/es8388
+;board_build.partitions = huge_app.csv
+board_build.partitions = custom_4mb_noota.csv
+build_flags = -DHAL=10
+			  -DBOARD_HAS_PSRAM
+              -mfix-esp32-psram-cache-issue
+			  -DLOG_BUFFER_SIZE=10240
+board_upload.maximum_size = 16777216
+board_upload.flash_size = 16MB
+
 ; custom board based on 8 MB flash devkitc
 [env:esp32-wrover-devkitc-v4-8mb]
 ;https://docs.platformio.org/en/latest/boards/espressif32/esp-wrover-kit.html
@@ -183,6 +198,8 @@ build_flags = -DHAL=99
 board_upload.maximum_size = 8388608
 board_upload.flash_size = 8MB
 ;monitor_filters = esp32_exception_decoder
+
+
 
 ;;; Change upload/monitor-port of your board regarding your operating-system and develboard!
 ;MAC: /dev/cu.SLAB_USBtoUART / /dev/cu.wchusbserial1420 / /dev/cu.wchusbserial1410
